# Pamphlet_SVP

./: .gitignore  CMakeLists.txt  README.md
resources/: poemeTest.txt
resources/poemes/: albatros.xml
resources/texts/poemes/: albatros.xml
src/core/: Animation.hpp  Animation.inl  CMakeLists.txt  Game.cpp  Game.h  GameObject.cpp  GameObject.h  InteractibleObject.cpp  InteractibleObject.h  TextureGestioner.cpp  TextureGestioner.h  myMain.cpp
src/core/Animation/: Animation.cpp  Animation.h  AnimationGroup.cpp  AnimationGroup.h  AnimationGroupLinear.cpp  AnimationGroupLinear.h  AnimationGroupParallel.cpp  AnimationGroupParallel.h  AnimationUnit.hpp  AnimationUnit.inl
src/core/Object/: Character.cpp  Character.h  FixObject.cpp  FixObject.h  GameObject.cpp  GameObject.h  InteractibleObject.cpp  InteractibleObject.h  Parchemin.cpp  Parchemin.h  ParcheminBig.cpp  ParcheminBig.h  ParcheminLittle.cpp  ParcheminLittle.h
src/core/Object/Interface/: Interface.cpp  Interface.h  InterfaceRectangle.cpp  InterfaceRectangle.h  InterfaceSprite.cpp  InterfaceSprite.h  InterfaceText.cpp  InterfaceText.h
src/core/Pretreatement/: CMakeLists.txt  createSQL.h  createXML.cpp  myMain.cpp
src/core/pretreatment/: createSQL.cpp  createXML.cpp  createXML.h  myMainPretreatment.cpp  myMainPretreatment.h
src/main/: CMakeLists.txt  main.cpp
src/sqlite/: CMakeLists.txt  README.md
src/test/: CMakeLists.txt  unitTests.cpp
